--- a/backend/package.json
+++ b/backend/package.json
@@ -15,26 +15,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
 
   },
-
   "author": "",
-
   "license": "ISC",
-
   "dependencies": {
-<<<<<<< Updated upstream
-
     "express": "^4.18.3",
-
     "mongoose": "^8.2.2",
-
-    "nodemon": "^3.1.0"
-
-=======
+    "nodemon": "^3.1.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2"
->>>>>>> Stashed changes
   }
 
 }
