--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
 
   "type": "module",
-  
+
   "name": "backend",
 
   "version": "1.0.0",
@@ -26,7 +26,9 @@
 
     "mongoose": "^8.2.2",
 
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+
+    "npm": "^10.5.0"
 
   }
 
