--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-/backend/node_modules
-/frontend/node_modules
+backend/node_modules
+frontend/node_modules
 .idea
-/backend/package-lock.json
-/frontend/package-lock.json
-/backend/.env
+backend/package-lock.json
+frontend/package-lock.json
+backend/.env
